# BBOOM_TASK

./: .gitignore  manage.py  pyproject.toml
bboom_source/: asgi.py  settings.py  urls.py  wsgi.py
posts/: models.py  serializers.py  urls.py  views.py
posts/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  users_serializer.py  views.py
users/migrations/: 0001_initial.py
